--- a/CMakeCPCHCompiler.cmake.in
+++ b/CMakeCPCHCompiler.cmake.in
@@ -1,8 +1,7 @@
 # Precompiled Header creation for C
 #
-# Author: Adam Strzelecki <ono@java.pl>
-# Copyright (c) 2014-2015 Adam Strzelecki. All rights reserved.
-# This code is licensed under the MIT License, see README.md.
+# Copyright (c) CMakePCHCompiler Authors. All rights reserved.
+# This code is licensed under the MIT License, see LICENSE.
 #
 # Copy compiler information from C compiler.
 
@@ -10,6 +9,8 @@ set(CMAKE_CPCH_COMPILER "@CMAKE_C_COMPILER@")
 set(CMAKE_CPCH_COMPILER_ARG1 "@CMAKE_C_COMPILER_ARG1@")
 set(CMAKE_CPCH_COMPILER_ID "@CMAKE_C_COMPILER_ID@")
 set(CMAKE_CPCH_COMPILER_VERSION "@CMAKE_C_COMPILER_VERSION@")
+set(CMAKE_CPCH_STANDARD_COMPUTED_DEFAULT "@CMAKE_C_STANDARD_COMPUTED_DEFAULT@")
+
 set(CMAKE_CPCH_PLATFORM_ID "@CMAKE_C_PLATFORM_ID@")
 set(CMAKE_CPCH_SIMULATE_ID "@CMAKE_C_SIMULATE_ID@")
 set(CMAKE_CPCH_SIMULATE_VERSION "@CMAKE_C_SIMULATE_VERSION@")
