--- a/CMakeCXXPCHCompiler.cmake.in
+++ b/CMakeCXXPCHCompiler.cmake.in
@@ -1,8 +1,7 @@
 # Precompiled Header creation for C++
 #
-# Author: Adam Strzelecki <ono@java.pl>
-# Copyright (c) 2014-2015 Adam Strzelecki. All rights reserved.
-# This code is licensed under the MIT License, see README.md.
+# Copyright (c) CMakePCHCompiler Authors. All rights reserved.
+# This code is licensed under the MIT License, see LICENSE.
 #
 # Copy compiler information from C++ compiler.
 
@@ -10,6 +9,8 @@ set(CMAKE_CXXPCH_COMPILER "@CMAKE_CXX_COMPILER@")
 set(CMAKE_CXXPCH_COMPILER_ARG1 "@CMAKE_CXX_COMPILER_ARG1@")
 set(CMAKE_CXXPCH_COMPILER_ID "@CMAKE_CXX_COMPILER_ID@")
 set(CMAKE_CXXPCH_COMPILER_VERSION "@CMAKE_CXX_COMPILER_VERSION@")
+set(CMAKE_CXXPCH_STANDARD_COMPUTED_DEFAULT "@CMAKE_CXX_STANDARD_COMPUTED_DEFAULT@")
+
 set(CMAKE_CXXPCH_PLATFORM_ID "@CMAKE_CXX_PLATFORM_ID@")
 set(CMAKE_CXXPCH_SIMULATE_ID "@CMAKE_CXX_SIMULATE_ID@")
 set(CMAKE_CXXPCH_SIMULATE_VERSION "@CMAKE_CXX_SIMULATE_VERSION@")
